# rca_variables_extractor

./: .coverage  .coverage 3  .coverage 4  .env.example  .gitignore  Makefile  README.md  check_gitignore.py  checkpoint.py  config.py  gemini_client.py  implementation_plan.md  list_models.py  main.py  output_validator.py  pdf_pipeline.py  pdf_utils.py  prompt_builder.py  pyproject.toml  requirements.txt  run.py  run_integration.py  seia-variables.xlsx  task_3.md  test_prompt_builder.py  walkthrough_3.md
.github/workflows/: ci.yml
api/: main.py
dashboard/: app.py
data/config/: seia-variables.xlsx
data/processed/: .~lock.results.xlsx#  checkpoint_raw_backup.json  projects.geojson
geo/: coord_parser.py  spatial_analysis.py
lca/: calculator.py
post_processing/: db_storage.py  validator.py
prompts/: extraction_prompt.md  extraction_prompt_eolica.md  extraction_prompt_fv.md  prompt_extraccion_eolica.md  tech_detection_prompt.md
scratch/: check_sdk.py  inspect_sdk.py
src/rca_extractor/: cli.py  config.py
src/rca_extractor/api/: main.py
src/rca_extractor/core/: gemini_client.py  pdf_pipeline.py
src/rca_extractor/dashboard/: app.py
src/rca_extractor/dashboard/components/: __init__.py  charts.py  maps.py
src/rca_extractor/geo/: coord_parser.py  run.py  spatial_analysis.py
src/rca_extractor/lca/: benchmarks.py  calculator.py  factors.py  run.py
src/rca_extractor/post_processing/: db_storage.py  migrate.py  normalizer.py  run.py  validator.py
src/rca_extractor/tools/: check_gitignore.py  check_pdfs.py  list_models.py  rca_scraper.py  snippet_api_key.py
src/rca_extractor/utils/: checkpoint.py  logger.py  output_validator.py  pdf_utils.py  prompt_builder.py  tech_detector.py
tests/: conftest.py  test_benchmarks.py  test_checkpoint.py  test_gemini_client.py  test_integration_pipeline.py  test_lca_calculator.py  test_migrate.py  test_output_validator.py  test_pdf_pipeline.py  test_prompt_builder.py  test_rca_scraper.py  test_tech_detector.py  test_tools.py
tools/: check_pdfs.py  snippet_api_key.py
