[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-extractor"
version = "0.1.0"
description = "Extractor automático de variables RCA usando Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.5.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "json-repair>=0.30.0",
    "tqdm>=4.66.0",
    "pymupdf>=1.24.0",
    "sqlalchemy>=2.0.48",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "plotly"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy"
]

[project.scripts]
rca-extractor = "rca_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rca_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-v --cov=rca_extractor"
testpaths = ["tests"]
