[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-extractor"
version = "1.0.0"
description = "Extractor automático de variables RCA usando Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "json-repair>=0.30.0,<1.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "pymupdf>=1.24.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "streamlit>=1.40.0,<2.0.0",
    "plotly>=5.24.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "cryptography>=42.0.0",
    "cffi>=1.16.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14.0,<1.0.0",
    "shapely>=2.0.0,<3.0.0",
    "pyproj>=3.6.0,<4.0.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.9.0,<2.0.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.0.0",
]

[project.scripts]
rca-extractor = "rca_extractor.cli:main"
rca-scraper = "rca_extractor.tools.rca_scraper:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rca_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-v --cov=rca_extractor --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rca_extractor.post_processing.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rca_extractor.lca.*"
ignore_errors = true
